--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,14 +16,23 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    compileOptions {
+        sourceCompatibility = 1.8
+        targetCompatibility = 1.8
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation "androidx.fragment:fragment:1.2.1"
+    implementation "androidx.fragment:fragment:1.2.2"
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.preference:preference:1.1.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.7.1'
+    implementation 'com.squareup.retrofit2:converter-gson:2.7.1'
+    //implementation 'com.squareup.okhttp3:logging-interceptor:3.8.0'
+    //implementation 'com.squareup.okhttp3:okhttp:3.8.0'
     api 'com.google.android.material:material:1.2.0-alpha04'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
